fix: Correct render.yaml for free tier

--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,10 @@
 services:
   - type: web
     name: aquaintel-backend
-    env: python
+    env: docker
     region: oregon
     plan: free
-    buildCommand: "pip install -r backend/requirements.txt"
-    startCommand: "cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT"
+    dockerfilePath: ./backend/Dockerfile
     healthCheckPath: /health
     envVars:
       - key: DATABASE_URL
@@ -47,10 +46,6 @@ services:
       url: postgres:15-alpine
     region: oregon
     plan: free
-    disk:
-      name: postgres_data
-      sizeGB: 1
-      mountPath: /var/lib/postgresql/data
 
   - type: pserv
     name: aquaintel-redis
@@ -58,7 +53,3 @@ services:
       url: redis:7-alpine
     region: oregon
     plan: free
-    disk:
-      name: redis_data
-      sizeGB: 1
-      mountPath: /data
