--- a/backend/requirements-minimal.txt
+++ b/backend/requirements-minimal.txt
@@ -18,3 +18,11 @@ python-docx==1.1.0
 PyMuPDF==1.23.0
 geopy==2.4.1
 networkx==3.2.1
+aiofiles==23.2.1
+pillow==10.1.0
+pypdf2==3.0.1
+python-docx==1.1.0
+PyMuPDF==1.23.0
+
+# OCR and image processing - MISSING FROM YOUR REQUIREMENTS  
+easyocr==1.7.0
