--- a/backend/requirements-minimal.txt
+++ b/backend/requirements-minimal.txt
@@ -5,6 +5,7 @@ pydantic==2.5.0
 sqlalchemy==2.0.43
 psycopg2-binary==2.9.10
 redis==5.0.1
+slowapi==0.1.9
 openai==1.3.8
 requests==2.31.0
 python-jose[cryptography]==3.3.0
