--- a/backend/requirements-minimal.txt
+++ b/backend/requirements-minimal.txt
@@ -8,6 +8,7 @@ redis==5.0.1
 slowapi==0.1.9
 openai==1.3.8
 requests==2.31.0
+aiohttp==3.9.1
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
@@ -19,11 +20,10 @@ python-docx==1.1.0
 PyMuPDF==1.23.0
 geopy==2.4.1
 networkx==3.2.1
-aiofiles==23.2.1
-pillow==10.1.0
-pypdf2==3.0.1
-python-docx==1.1.0
-PyMuPDF==1.23.0
-
-# OCR and image processing - MISSING FROM YOUR REQUIREMENTS  
 easyocr==1.7.0
+httpx==0.25.2
+pandas==2.1.4
+matplotlib==3.8.2
+haversine==2.8.1
+pytz==2023.3.post1
+python-dateutil==2.8.2
